<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/sfprodisplay_black"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_rate"
        android:fontFamily="@font/sfprodisplay_regular"
        android:textColor="@color/grey_text_1"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_choose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/btn_subscribe_six_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rate"
            android:clickable="true"
            tools:ignore="UselessParent"
            android:focusable="true">

            <LinearLayout
                android:id="@id/ll_container1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_check_mark_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_mark"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_title_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six_month_rate"
                    android:fontFamily="@font/sfprodisplay_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_month_price"
                android:fontFamily="@font/sfprodisplay_heavy"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six_month_desc"
                android:fontFamily="@font/sfprodisplay_regular"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/ll_container1"
                android:layout_below="@+id/ll_container1"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_subscribe_one_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rate"
            android:clickable="true"
            android:layout_marginTop="16dp"
            tools:ignore="UselessParent"
            android:focusable="true">


            <LinearLayout
                android:id="@id/ll_container2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_check_mark_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_mark"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_title_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_month_rate"
                    android:fontFamily="@font/sfprodisplay_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_month_price"
                android:fontFamily="@font/sfprodisplay_heavy"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_month_desc"
                android:fontFamily="@font/sfprodisplay_regular"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/ll_container2"
                android:layout_below="@+id/ll_container2"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_subscribe_forever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_rate"
            android:clickable="true"
            android:layout_marginTop="16dp"
            tools:ignore="UselessParent"
            android:focusable="true">

            <LinearLayout
                android:id="@id/ll_container3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_check_mark_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_mark"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_title_forever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forever_rate"
                    android:fontFamily="@font/sfprodisplay_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forever_price"
                android:fontFamily="@font/sfprodisplay_heavy"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forever_desc"
                android:fontFamily="@font/sfprodisplay_regular"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/ll_container3"
                android:layout_below="@+id/ll_container3"/>

        </RelativeLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_subscribe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/sfprodisplay_semibold"
        android:text="@string/subscribe"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_purchases"
        android:fontFamily="@font/sfprodisplay_semibold"
        android:textColor="@color/grey_text_2"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_subscribe"
        app:layout_constraintEnd_toEndOf="@id/btn_subscribe"/>

</androidx.constraintlayout.widget.ConstraintLayout>